Corrige compatibilidade com Java 8 no carregamento do env